--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-textarea-autosize": "^8.3.3",
-    "react-transition-group": "^4.4.2",
-    "swr": "^1.2.1"
+    "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
